Dodanie meta tagow do index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta property="og:title" content="Snake Neon Arena" />
+    <meta property="og:image" content="https://snake-neon-arena.vercel.app/splash.png" />
+    <meta property="fc:frame" content="vNext" />
+    <meta property="fc:frame:image" content="https://snake-neon-arena.vercel.app/splash.png" />
+    <meta property="fc:frame:button:1" content="Play Snake 🐍" />
+    <meta property="fc:frame:button:1:action" content="link" />
+    <meta property="fc:frame:button:1:target" content="https://snake-neon-arena.vercel.app" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>Snake Neon Arena</title>
