--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <meta property="og:title" content="Snake Neon Arena" />
+    <meta property="og:description" content="Play the classic Snake game in neon style!" />
     <meta property="og:image" content="https://snake-neon-arena.vercel.app/splash.png" />
+    
     <meta property="fc:frame" content="vNext" />
     <meta property="fc:frame:image" content="https://snake-neon-arena.vercel.app/splash.png" />
+    <meta property="fc:frame:image:aspect_ratio" content="1:1" />
     <meta property="fc:frame:button:1" content="Play Snake 🐍" />
-    <meta property="fc:frame:button:1:action" content="link" />
-    <meta property="fc:frame:button:1:target" content="https://snake-neon-arena.vercel.app" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta property="fc:frame:button:1:action" content="launch_frame" />
+    <meta property="fc:frame:manifest" content="https://snake-neon-arena.vercel.app/.well-known/farcaster.json" />
+
     <title>Snake Neon Arena</title>
     <style>
       html, body {
