Dodanie hero.png i logo.png - naprawa brakujacych plikow

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     
     <meta property="og:title" content="Snake Neon Arena" />
     <meta property="og:description" content="Play the classic Snake game in neon style!" />
-    <meta property="og:image" content="https://snake-neon-arena.vercel.app/cover.png" />
+    <meta property="og:image" content="https://snake-neon-arena.vercel.app/hero.png" />
     
     <meta property="fc:frame" content="vNext" />
-    <meta property="fc:frame:image" content="https://snake-neon-arena.vercel.app/cover.png" />
+    <meta property="fc:frame:image" content="https://snake-neon-arena.vercel.app/hero.png" />
     <meta property="fc:frame:image:aspect_ratio" content="1:1" />
     <meta property="fc:frame:button:1" content="Play Snake 🐍" />
     <meta property="fc:frame:button:1:action" content="launch_frame" />
