--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     
     <meta property="fc:frame:button:1" content="Play Snake 🐍" />
     <meta property="fc:frame:button:1:action" content="launch_frame" />
+    <meta property="fc:frame:button:1:target" content="https://snake-neon-arena.vercel.app" />
     <meta property="fc:frame:manifest" content="https://snake-neon-arena.vercel.app/.well-known/farcaster.json" />
 
     <title>Snake Neon Arena</title>
