Optimize image size to JPG

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
     <meta property="og:title" content="Snake Neon Arena 🐍" />
     <meta property="og:description" content="Play the classic Snake game in neon style on Base!" />
-    <meta property="og:image" content="https://snake-neon-arena.vercel.app/snake-cover.png" />
+    <meta property="og:image" content="https://snake-neon-arena.vercel.app/cover-final.jpg" /> />
     <meta property="og:url" content="https://snake-neon-arena.vercel.app" />
     <meta property="og:type" content="website" />
     
     <meta property="fc:frame" content="vNext" />
     <meta property="fc:frame:post_url" content="https://snake-neon-arena.vercel.app" />
-    <meta property="fc:frame:image" content="https://snake-neon-arena.vercel.app/snake-cover.png" />
-    <meta property="fc:frame:image:aspect_ratio" content="1.91:1" />
+    <meta property="fc:frame:image" content="https://snake-neon-arena.vercel.app/cover-final.jpg" />
+    <meta property="fc:frame:image:aspect_ratio" content="1:1" />
     
     <meta property="fc:frame:button:1" content="Play Snake 🐍" />
     <meta property="fc:frame:button:1:action" content="launch_frame" />
