--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <meta property="og:title" content="Snake Neon Arena 🐍" />
     <meta property="og:description" content="Play the classic Snake game in neon style on Base!" />
-    <meta property="og:image" content="https://snake-neon-arena.vercel.app/cover-final.jpg" /> />
+    <meta property="og:image" content="https://snake-neon-arena.vercel.app/cover-final.jpg" />
     <meta property="og:url" content="https://snake-neon-arena.vercel.app" />
     <meta property="og:type" content="website" />
     
@@ -36,15 +36,13 @@
         padding: 0;
         width: 100%;
         height: 100%;
-        overflow: hidden; /* Blokada pasków przewijania */
+        overflow: hidden;
         background: linear-gradient(135deg, #0a0e27 0%, #1a103d 100%);
-        
-        /* 🔥 BLOKADA GESTÓW SYSTEMOWYCH 🔥 */
-        touch-action: none;        /* Blokuje przesuwanie/zoomowanie palcem */
-        overscroll-behavior: none; /* Blokuje "pull-to-refresh" */
-        -webkit-user-select: none; /* Blokuje zaznaczanie tekstu na iOS */
-        user-select: none;         /* Blokuje zaznaczanie tekstu */
-        -webkit-tap-highlight-color: transparent; /* Usuwa błysk przy kliknięciu */
+        touch-action: none;
+        overscroll-behavior: none;
+        -webkit-user-select: none;
+        user-select: none;
+        -webkit-tap-highlight-color: transparent;
       }
       #root {
         width: 100%;
@@ -67,14 +65,14 @@
       let lastTouchEnd = 0;
       document.addEventListener('touchstart', function(event) {
           if (event.touches.length > 1) {
-              event.preventDefault(); // Blokuje szczypanie (multitouch zoom)
+              event.preventDefault();
           }
       }, { passive: false });
 
       document.addEventListener('touchend', function(event) {
           const now = (new Date()).getTime();
           if (now - lastTouchEnd <= 300) {
-              event.preventDefault(); // Blokuje double-tap zoom
+              event.preventDefault();
           }
           lastTouchEnd = now;
       }, { passive: false });
