--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
     <meta property="fc:frame" content="vNext" />
     <meta property="fc:frame:image" content="https://snake-neon-arena.vercel.app/cover-final.jpg" />
     <meta property="fc:frame:image:aspect_ratio" content="1:1" />
-    
+
+    <meta property="fc:frame:post_url" content="https://snake-neon-arena.vercel.app" />
+
     <meta property="fc:frame:manifest" content="https://snake-neon-arena.vercel.app/.well-known/farcaster.json" />
 
     <meta property="fc:frame:button:1" content="Play Snake 🐍" />
-    <meta property="fc:frame:button:1:action" content="link" />
+    <meta property="fc:frame:button:1:action" content="launch_frame" />
     <meta property="fc:frame:button:1:target" content="https://snake-neon-arena.vercel.app" />
 
     <style>
