feat: add base app verification tag

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:url" content="https://snake-neon-arena.vercel.app" />
     <meta property="og:type" content="website" />
-
+    <meta name="base:app_id" content="696bb5a7c0ab25addaaaf28c" />
     <meta name="fc:miniapp" content='{
       "version": "1",
       "imageUrl": "https://snake-neon-arena.vercel.app/cover-final.jpg",
