Final assets update and config polish

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     
     <title>Snake Neon Arena 🐍</title>
@@ -11,23 +12,23 @@
 
     <meta property="og:title" content="Snake Neon Arena 🐍" />
     <meta property="og:description" content="Play the classic Snake game in neon style on Base!" />
-    <meta property="og:image" content="https://snake-neon-arena.vercel.app/cover-final.jpg" />
-    <meta property="og:image:width" content="1024" />
-    <meta property="og:image:height" content="1024" />
-    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image" content="https://snake-neon-arena.vercel.app/promo-base.png" />
+    <meta property="og:image:width" content="1002" />
+    <meta property="og:image:height" content="548" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="og:url" content="https://snake-neon-arena.vercel.app" />
     <meta property="og:type" content="website" />
     <meta name="base:app_id" content="696bb5a7c0ab25addaaaf28c" />
     <meta name="fc:miniapp" content='{
       "version": "1",
-      "imageUrl": "https://snake-neon-arena.vercel.app/cover-final.jpg",
+      "imageUrl": "https://snake-neon-arena.vercel.app/promo-base.png",
       "button": {
         "title": "Play Snake 🐍",
         "action": {
           "type": "launch_frame",
           "name": "Snake Neon Arena",
           "url": "https://snake-neon-arena.vercel.app",
-          "splashImageUrl": "https://snake-neon-arena.vercel.app/cover-final.jpg",
+          "splashImageUrl": "https://snake-neon-arena.vercel.app/promo-base.png",
           "splashBackgroundColor": "#0a0e27"
         }
       }
